--- a/arch/arm/boot/dts/qcom/msm8953-sanders.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8953-sanders.dtsi
@@ -1030,7 +1030,7 @@
 			status = "okay";
 			qcom,led_mpp_2 {
 				label = "mpp";
-				linux,name = "white";
+				linux,name = "charging";
 				linux,default-trigger = "none";
 				qcom,default-state = "off";
 				qcom,max-current = <40>;
