--- a/arch/arm/boot/dts/qcom/sdm450-ali.dtsi
+++ b/arch/arm/boot/dts/qcom/sdm450-ali.dtsi
@@ -817,7 +817,7 @@
 			status = "ok";
 			reg = <0x1000 0x100>;
 			compatible = "qcom,leds-atc";
-			linux,name = "ali";
+			linux,name = "charging";
 			qcom,ctrl-reg = <0x243>;
 		};
 	};
